@@ -1,0 +1,4 @@
+test.LaTeX <- function() {
+	graph <- BretzEtAl2011()
+	
+}
