@@ -1,6 +1,16 @@
 Version 0.7-4 (??-01-2012, Rev. 1???)
 =====================================
 
+- 
+
+- The bundled version closes the R console if the GUI is closed.
+  (This time for real.)
+
+- For people who create graphs in R and set the layout in the GUI: 
+  If a node is dragged, edge weights also move except when they are "fixed".
+  A node is set fixed, if it is dragged itself. 
+  Saving and reloading a graph fixes all edges.
+    
 
 Version 0.7-3 (16-01-2012, Rev. 1057)
 =====================================
